# django-pg-migration-tools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  noxfile.py  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: build_and_publish.yaml  coverage_comment.yaml  docs.yaml  lint.yaml  tests.yaml
docs/: conf.py  index.rst
docs/guides/: migration_guides.rst
docs/usage/: indexes.rst  management_commands.rst  operations.rst  timeouts.rst
requirements/: development.txt  docs.txt  firstparty.txt  pytest-in-nox-psycopg2.txt  pytest-in-nox-psycopg3.txt  pytest-in-nox.txt
src/django_pg_migration_tools/: __init__.py  _queries.py  indexes.py  operations.py  timeout_retries.py  timeouts.py
src/django_pg_migration_tools/management/commands/: migrate_with_timeouts.py
tests/django_pg_migration_tools/: test_indexes.py  test_multitenancy.py  test_operations.py  test_package.py  test_timeout_retries.py  test_timeouts.py
tests/django_pg_migration_tools/management/commands/: test_migrate_with_timeouts.py
tests/example_app/: models.py  settings.py
